<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_chat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:text="@string/logo_name"
        android:textColor="@color/yellow_heading"
        android:textSize="@dimen/logo_heading"
        android:textStyle="italic"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:hint="@string/fname"
        android:textColorHint="@color/boxfill"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/lname"
        android:textColorHint="@color/boxfill"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/boxfill"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/pass"
        android:textColorHint="@color/boxfill"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/repass"
        android:textColorHint="@color/boxfill"

        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"

        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/male"
            android:textColor="@color/boxfill"
            android:textSize="@dimen/radio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="@string/female"
            android:textColor="@color/boxfill"
            android:textSize="@dimen/radio" />
    </RelativeLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/btn"
        android:text="@string/signup"
        android:textSize="@dimen/supbtn"
        android:id="@+id/supbtn"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/logindir"
            android:textColor="@color/logindir"
            android:textSize="@dimen/logindir" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onLoginClicked"
            android:text="@string/login"
            android:textColor="@color/login"

            android:textSize="@dimen/logindir" />
    </RelativeLayout>

</LinearLayout>